--- a/index.html
+++ b/index.html
@@ -1,10 +1,153 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>My first web page</title>
+	<title>MON CV</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+	
 </head>
-<body class="text-center">
-  <h1>My first web page</h1>
+<body>
+
+	<div class="my-navbar">
+    <img src="image/logo.png" class="logo" width="50px">
+    <div class="links">
+      <a href="" class="link">Présentation</a>
+      <a href="" class="link">Description</a>
+      <a href="" class="link">LinkedIn</a>
+    </div>
+  </div>
+
+	<div class="pres margin-50px" >
+	<h1> MON CV </h1>
+
+	<h2> CANDICE GRAS</h2>
+
+	<img src="image/moi.jpg" alt="candice" width="300px"class="photo">
+
+	 <p> 
+	<strong>Candice (n.f) :</strong>
+	<br>Efapienne dotée d'une sensibilité certaine qui lui permet de voir et penser le monde différemment. 
+	<br>Créative, ambitieuse, curieuse, elle aspire à devenir une communicante de renom et vous invite à prendre part à cet épanouissement professionnel. Particulièrement attirée par les relations médias elle souhaite cependant ouvrir son champ des possibles.
+	<br><strong>Synonyme : Future stagiaire motivée, impliquée et appliquée.</strong>
+	</p>
+	</div>
+
+	<div class="part1 margin-50px">
+	<div class="form margin-right-30px">
+	<h2>FORMATION</h2> 
+	<p>
+		<strong>2018 - 2023</strong>
+		<br>Préparation au diplôme niveau I « Directrice de Communication » EFAP
+
+		<strong><br>2017 - 2018</strong>
+		<br>1ère année validée de Lettres Modernes
+		Université Bordeaux Montaigne
+
+		<strong><br>2016 - 2017</strong>
+		<br>Préparation au Baccalauréat Littéraire
+		Lycée Bernard Palissy
+	</p>
+	</div>
+
+	<div class="diplomes">
+	<h2>DIPLÔMES</h2> 
+	<p>
+		<strong>2017</strong>
+		<br>Diplôme du Baccalauréat Littéraire Mention Très Bien
+
+		<br><strong>2015</strong>
+		<br>Cambridge English Certificate Level B1
+	</p>
+	</div>
+	</div>
+	
+	<div class="exp margin-50px">
+	<h2>EXPÉRIENCE PROFESSIONNELLE</h2>
+	<p>
+			<strong>2020
+			[3 mois] Agence Profile! – Consultante Junior</strong>
+		<ul>
+			<li>RP : Gestion et analyse des retombées, Press Books, relances journalistes</li>
+			<li>Veille concurrentielle et sectorielle</li>
+			<li>Assistance sur les recommandations clients (mapping média)</li>
+			<li>Influence : réalisation de fichiers influenceurs</li>
+			<li>Social média : assistance sur les stratégies digitales et création de contenu</li>
+		</ul>
+			<p><strong>2019
+			[1 mois] LOU.YETU - Stagiaire en relation client</strong></p>
+		<ul>
+			<li>Traitement des messages et requêtes clients</li>
+			<li>Résolution des litiges</li>
+			<li>Gestion des tâches opérationnelles SAV</li>
+		</ul>
+			<p><strong>2019
+			[3 mois] Agence Matahari - Assistante</strong></p>
+		<ul>
+			<li>RP : Gestion et analyse des revues de presse, réalisation de fichiers journalistes, Press Books et bilans.</li>
+			<li>Coordination et analyse de portages à destination des journalistes et/ou influenceurs.</li>
+			<li>Community Management (création de contenu).</li>
+			<li>Événementiel (réflexions, recherches, négociations).</li> 
+			<li>E-RP : veille et suivi des influenceurs.</li>
+		</ul>
+	</p>
+	</div>
+
+	<div class="part2 margin-50px">
+	<div class="qualites margin-right-30px">
+	<h2>QUALITÉS PROFESSIONNELLES</h2>
+	<ul>
+		<li>Travail d’équipe</li>
+		<li>Organisation</li>
+		<li>Autonomie</li>
+		<li>Polyvalence</li>
+		<li>Créativité</li>
+	</ul>
+	</div>
+
+	<div class="comp">
+	<h2>COMPÉTENCES</h2>
+	<ul>
+		<li>Pack Office</li>
+		<li>Suite Adobe</li>
+		<li>Anglais</li>
+		<li>Espagnol</li>
+	</p>
+	</div>
+	</div>
+
+	<a href="https://www.linkedin.com/in/candice-gras-efap/" target="_blank" class="my-btn margin-50px">Si vous êtes curieux</a>
+
+	<!-- Button trigger modal -->
+<button type="button" class="my-btn" data-toggle="modal" data-target="#exampleModal">
+  Contact
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 </html>
