--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/f03be0c00a.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/18ee24e4d3.js"></script>
 	<link rel="stylesheet" href="style.css">
 	
 </head>
@@ -13,21 +15,25 @@
 	<div class="my-navbar">
     <img src="image/logo.png" class="logo" width="50px">
     <div class="links">
-      <a href="" class="link">Présentation</a>
-      <a href="" class="link">Description</a>
-      <a href="" class="link">LinkedIn</a>
+      <a href="#des" class="link">Description</a>
+      <a href="#form" class="link">Formation/Diplômes</a>
+      <a href="#exp" class="link">Expériences</a>
+      <a href="#qual" class="link">Qualités/Compétences</a>
+      <a href="#vous" class="link">Vous</a>
+      <a href="#loin" class="link">Pour aller + loin</a>
     </div>
   </div>
 
 	<div class="pres margin-50px" >
-	<h1> MON CV </h1>
+		<a id="des"></a>
+	<h1> <strong>MON CV</strong> </h1>
 
 	<h2> CANDICE GRAS</h2>
 
 	<img src="image/moi.jpg" alt="candice" width="300px"class="photo">
 
 	 <p> 
-	<strong>Candice (n.f) :</strong>
+	<strong><br>Candice (n.f) :</strong>
 	<br>Efapienne dotée d'une sensibilité certaine qui lui permet de voir et penser le monde différemment. 
 	<br>Créative, ambitieuse, curieuse, elle aspire à devenir une communicante de renom et vous invite à prendre part à cet épanouissement professionnel. Particulièrement attirée par les relations médias elle souhaite cependant ouvrir son champ des possibles.
 	<br><strong>Synonyme : Future stagiaire motivée, impliquée et appliquée.</strong>
@@ -36,7 +42,8 @@
 
 	<div class="part1 margin-50px">
 	<div class="form margin-right-30px">
-	<h2>FORMATION</h2> 
+		<a id="form"></a>
+	<h2><strong>FORMATION</strong></h2> 
 	<p>
 		<strong>2018 - 2023</strong>
 		<br>Préparation au diplôme niveau I « Directrice de Communication » EFAP
@@ -52,7 +59,7 @@
 	</div>
 
 	<div class="diplomes">
-	<h2>DIPLÔMES</h2> 
+	<h2><strong>DIPLÔMES</strong></h2> 
 	<p>
 		<strong>2017</strong>
 		<br>Diplôme du Baccalauréat Littéraire Mention Très Bien
@@ -62,9 +69,10 @@
 	</p>
 	</div>
 	</div>
-	
+
+	<a id="exp"></a>
 	<div class="exp margin-50px">
-	<h2>EXPÉRIENCE PROFESSIONNELLE</h2>
+	<h2><strong>EXPÉRIENCE PROFESSIONNELLE</strong></h2>
 	<p>
 			<strong>2020
 			[3 mois] Agence Profile! – Consultante Junior</strong>
@@ -94,9 +102,10 @@
 	</p>
 	</div>
 
+	<a id="qual"></a>
 	<div class="part2 margin-50px">
-	<div class="qualites margin-right-30px">
-	<h2>QUALITÉS PROFESSIONNELLES</h2>
+	<div class="qualites">
+	<h2><strong>QUALITÉS PROFESSIONNELLES</strong></h2>
 	<ul>
 		<li>Travail d’équipe</li>
 		<li>Organisation</li>
@@ -107,17 +116,36 @@
 	</div>
 
 	<div class="comp">
-	<h2>COMPÉTENCES</h2>
+	<h2><strong>COMPÉTENCES</strong></h2>
 	<ul>
 		<li>Pack Office</li>
 		<li>Suite Adobe</li>
 		<li>Anglais</li>
 		<li>Espagnol</li>
-	</p>
+	</ul>
 	</div>
 	</div>
 
-	<a href="https://www.linkedin.com/in/candice-gras-efap/" target="_blank" class="my-btn margin-50px">Si vous êtes curieux</a>
+	<a id="vous"></a>
+	<div class="type margin-50px">
+		<h3> <strong>ASSEZ PARLÉ DE MOI !</strong></h3>
+		<div class="typeform-widget" data-url="https://form.typeform.com/to/myHEjERv" style="width: 100%; height: 300px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=myHEjERv&utm_source=typeform.com-01E95HY53R1CAYR8M7HTCNJF8A-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+	</div>
+
+	<a id="loin"></a>
+	<div class="part3 margin-50px">
+	<div class ="video margin-right-30px">
+	<h2><strong>UN PEU PLUS SUR L'EFAP</strong></h2>  
+	<iframe width="500" height="300" src="https://www.youtube.com/embed/Aib9FNmuT4c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
+	<div class ="map"> 
+	<h2><strong>OÙ ?</strong></h2> 	
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.5955909115523!2d-0.5737849844630032!3d44.850168579098444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527c83c300001%3A0x755af41fb0edfe48!2sEFAP%20Bordeaux%2C%20%C3%89cole%20des%20Nouveaux%20M%C3%A9tiers%20de%20la%20Communication!5e0!3m2!1sfr!2sfr!4v1592418992190!5m2!1sfr!2sfr" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+	</div>
+	</div>
+
+	<a href="cv.html" target="_blank" class="my-btn margin-50px">Mon CV PDF</a>
 
 	<!-- Button trigger modal -->
 <button type="button" class="my-btn" data-toggle="modal" data-target="#exampleModal">
@@ -129,21 +157,35 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="mail" id="exampleModalLabel">Contactez moi</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <i class="fas fa-envelope"></i>
+        <a href="mailto:candice.gras@efap.com" class="mail" target="_blanck">candice.gras@efap.com</a>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="my-btn" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
+
+<a href="https://www.linkedin.com/posts/candice-gras-efap_communication-stages-intern-activity-6656846283803770880-0pKJ" target="_blank" class="my-btn margin-50px">Mon CV Vidéo</a>
+
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="https://www.instagram.com/bagalame/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/candice-gras-efap/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+   ©CANDICE GRAS
+  </div>
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
